@@ -84,7 +84,8 @@ public:
   ACE_Process_Options (bool inherit_environment = true,
                        size_t command_line_buf_len = DEFAULT_COMMAND_LINE_BUF_LEN,
                        size_t env_buf_len = ENVIRONMENT_BUFFER,
-                       size_t max_env_args = MAX_ENVIRONMENT_ARGS);
+                       size_t max_env_args = MAX_ENVIRONMENT_ARGS,
+                       size_t max_cmdline_args = MAX_COMMAND_LINE_OPTIONS);
 
   /// Destructor.
   ~ACE_Process_Options (void);
@@ -440,8 +441,11 @@ protected:
   /// Max length of command_line_buf_
   size_t command_line_buf_len_;
 
+  /// Maximum number of command-line arguments. Configurable
+  size_t max_command_line_args_;
+
   /// Argv-style command-line arguments.
-  ACE_TCHAR *command_line_argv_[MAX_COMMAND_LINE_OPTIONS];
+  ACE_TCHAR **command_line_argv_;
 
   /// Process-group on Unix; unused on Win32.
   pid_t process_group_;
